--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "NodeJs-Atom",
-  "version": "0.0.1",
-  "description": "Atom Integration using Nodejs",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0",
-    "body-parser": "^1.13.2",
+    "axios": "^0.21.4",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "express": "^4.13.1",
-    "libxmljs": "0.15.0",
-    "node-fetch": "^3.1.0",
-    "node-gyp": "^3.8.0",
-    "xml-selector": "^0.3.0",
-    "xml2js": "^0.4.19"
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.7",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.17",
+    "react-geocode": "^0.2.2",
+    "shortid": "^2.2.16",
+    "stripe": "^8.129.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
   }
 }
